Ble fichier,  lve debut photo fichier, copy um = GG
continue sur la gestion de fichier des lve,
menu modifié à la demande de mohamed,
ajout de la gestion des "diffs" dans les lbcs,
a finir en 1er, duplication sur les ume! (colis)

--- a/djangoproject/gestion_stock/static/css/style.css
+++ b/djangoproject/gestion_stock/static/css/style.css
@@ -217,3 +217,26 @@ table.dataTable thead .sorting_desc_disabled:before {
   right:249px;
   top:10px;
 }*/
+
+.vertical-menu {
+  width: 200px;
+  height: 450px;
+  overflow-y: auto;
+}
+
+.vertical-menu a {
+  background-color: #eee;
+  color: black;
+  display: block;
+  padding: 12px;
+  text-decoration: none;
+}
+
+.vertical-menu a:hover {
+  background-color: #ccc;
+}
+
+.vertical-menu a.active {
+  background-color: #4CAF50;
+  color: white;
+}
